@@ -8,10 +8,10 @@ package org.whispersystems.textsecuregcm.storage;
 import static com.codahale.metrics.MetricRegistry.name;
 
 import com.google.common.annotations.VisibleForTesting;
+import com.google.protobuf.ByteString;
 import com.google.protobuf.InvalidProtocolBufferException;
 import io.dropwizard.lifecycle.Managed;
 import io.lettuce.core.ScoredValue;
-import io.lettuce.core.ScriptOutputType;
 import io.lettuce.core.ZAddArgs;
 import io.lettuce.core.cluster.SlotHash;
 import io.lettuce.core.cluster.models.partitions.RedisClusterNode;
@@ -20,6 +20,7 @@ import io.micrometer.core.instrument.Counter;
 import io.micrometer.core.instrument.Metrics;
 import io.micrometer.core.instrument.Timer;
 import java.io.IOException;
+import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
 import java.time.Clock;
 import java.time.Duration;
@@ -38,14 +39,17 @@ import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import org.reactivestreams.Publisher;
+import org.signal.libsignal.protocol.SealedSenderMultiRecipientMessage;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.whispersystems.textsecuregcm.configuration.dynamic.DynamicConfiguration;
+import org.whispersystems.textsecuregcm.configuration.dynamic.DynamicMessagesConfiguration;
 import org.whispersystems.textsecuregcm.entities.MessageProtos;
+import org.whispersystems.textsecuregcm.experiment.Experiment;
+import org.whispersystems.textsecuregcm.identity.AciServiceIdentifier;
 import org.whispersystems.textsecuregcm.metrics.MetricsUtil;
-import org.whispersystems.textsecuregcm.redis.ClusterLuaScript;
 import org.whispersystems.textsecuregcm.redis.FaultTolerantPubSubConnection;
 import org.whispersystems.textsecuregcm.redis.FaultTolerantRedisCluster;
 import org.whispersystems.textsecuregcm.util.Pair;
@@ -57,6 +61,62 @@ import reactor.core.publisher.Mono;
 import reactor.core.scheduler.Scheduler;
 import reactor.core.scheduler.Schedulers;
 
+/**
+ * Manages short-term storage of messages in Redis. Messages are frequently delivered to their destination and deleted
+ * shortly after they reach the server, and this cache acts as a low-latency holding area for new messages, reducing
+ * load on higher-latency, longer-term storage systems. Redis in particular provides keyspace notifications, which act
+ * as a form of pub-sub notifications to alert listeners when new messages arrive.
+ * <p>
+ * The following structures are used:
+ * <dl>
+ *   <dt>{@code queueKey}</code></dt>
+ *   <dd>A sorted set of messages in a device’s queue. A message’s score is its queue-local message ID. See
+ *   <a href="https://redis.io/docs/latest/develop/use/patterns/twitter-clone/#the-sorted-set-data-type">Redis.io: The
+ *   Sorted Set data type</a> for background on scores and this data structure.</dd>
+ *   <dt>{@code queueMetadataKey}</dt>
+ *   <dd>A hash containing message guids and their queue-local message ID. It also contains a {@code counter} key, which is
+ *   incremented to supply the next message ID. This is used to remove a message by GUID from {@code queueKey} by its
+ *   local messageId.</dd>
+ *   <dt>{@code sharedMrmKey}</dt>
+ *   <dd>A hash containing a single multi-recipient message pending delivery. It contains:
+ *     <ul>
+ *       <li>{@code data} - the serialized SealedSenderMultiRecipientMessage data</li>
+ *       <li>fields with each recipient device's “view” into the payload ({@link SealedSenderMultiRecipientMessage#serializedRecipientView(SealedSenderMultiRecipientMessage.Recipient)}</li>
+ *     </ul>
+ *     Note: this is shared among all of the message's recipients, and it may be located in any Redis shard. As each recipient’s
+ *     message is delivered, its corresponding view is idempotently removed. When {@code data} is the only remaining
+ *     field, the hash will be deleted.
+ *     </dd>
+ *   <dt>{@code queueLockKey}</dt>
+ *   <dd>Used to indicate that a queue is being modified by the {@link MessagePersister} and that {@code get_items} should
+ *   return an empty list.</dd>
+ *   <dt>{@code queueTotalIndexKey}</dt>
+ *   <dd>A sorted set of all queues in a shard. A queue’s score is the timestamp of its oldest message, which is used by
+ *   the {@link MessagePersister} to prioritize queues to persist.</dd>
+ * </dl>
+ * <p>
+ * At a high level, the process is:
+ * <ol>
+ *   <li>Insert: the queue metadata is queried for the next incremented message ID. The message data is inserted into
+ *   the queue at that ID, and the message GUID is inserted in the queue metadata.</li>
+ *   <li>Get: a batch of messages are retrieved from the queue, potentially with an after-message-ID offset.</li>
+ *   <li>Remove: a set of messages are remove by GUID. For each GUID, the message ID is retrieved from the queue metadata,
+ *   and then that single-value range is removed from the queue.</li>
+ * </ol>
+ * For multi-recipient messages (sometimes abbreviated “MRM”), there are similar operations on the common data during
+ * insert, get, and remove. MRM inserts must occur before individual queue inserts, while removal is considered
+ * best-effort, and uses key expiration as back-stop garbage collection.
+ * <p>
+ * For atomicity, many operations are implemented as Lua scripts that are executed on the Redis server using
+ * {@code EVAL}/{@code EVALSHA}.
+ *
+ * @see MessagesCacheInsertScript
+ * @see MessagesCacheInsertSharedMultiRecipientPayloadAndViewsScript
+ * @see MessagesCacheGetItemsScript
+ * @see MessagesCacheRemoveByGuidScript
+ * @see MessagesCacheRemoveRecipientViewFromMrmDataScript
+ * @see MessagesCacheRemoveQueueScript
+ */
 public class MessagesCache extends RedisClusterPubSubAdapter<String, String> implements Managed {
 
   private final FaultTolerantRedisCluster redisCluster;
@@ -69,19 +129,26 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
   // messageDeletionExecutorService wrapped into a reactor Scheduler
   private final Scheduler messageDeletionScheduler;
 
-  private final ClusterLuaScript insertScript;
-  private final ClusterLuaScript removeByGuidScript;
-  private final ClusterLuaScript getItemsScript;
-  private final ClusterLuaScript removeQueueScript;
-  private final ClusterLuaScript getQueuesToPersistScript;
+  private final DynamicConfigurationManager<DynamicConfiguration> dynamicConfigurationManager;
+
+  private final MessagesCacheInsertScript insertScript;
+  private final MessagesCacheInsertSharedMultiRecipientPayloadAndViewsScript insertMrmScript;
+  private final MessagesCacheRemoveByGuidScript removeByGuidScript;
+  private final MessagesCacheGetItemsScript getItemsScript;
+  private final MessagesCacheRemoveQueueScript removeQueueScript;
+  private final MessagesCacheGetQueuesToPersistScript getQueuesToPersistScript;
+  private final MessagesCacheRemoveRecipientViewFromMrmDataScript removeRecipientViewFromMrmDataScript;
 
   private final ReentrantLock messageListenersLock = new ReentrantLock();
   private final Map<String, MessageAvailabilityListener> messageListenersByQueueName = new HashMap<>();
   private final Map<MessageAvailabilityListener, String> queueNamesByMessageListener = new IdentityHashMap<>();
 
   private final Timer insertTimer = Metrics.timer(name(MessagesCache.class, "insert"));
+  private final Timer insertSharedMrmPayloadTimer = Metrics.timer(name(MessagesCache.class, "insertSharedMrmPayload"));
   private final Timer getMessagesTimer = Metrics.timer(name(MessagesCache.class, "get"));
   private final Timer getQueuesToPersistTimer = Metrics.timer(name(MessagesCache.class, "getQueuesToPersist"));
+  private final Timer removeByGuidTimer = Metrics.timer(name(MessagesCache.class, "removeByGuid"));
+  private final Timer removeRecipientViewTimer = Metrics.timer(name(MessagesCache.class, "removeRecipientView"));
   private final Timer clearQueueTimer = Metrics.timer(name(MessagesCache.class, "clear"));
   private final Counter pubSubMessageCounter = Metrics.counter(name(MessagesCache.class, "pubSubMessage"));
   private final Counter newMessageNotificationCounter = Metrics.counter(
@@ -94,6 +161,9 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
       name(MessagesCache.class, "messageAvailabilityListenerRemovedAfterAdd"));
   private final Counter prunedStaleSubscriptionCounter = Metrics.counter(
       name(MessagesCache.class, "prunedStaleSubscription"));
+  private final Counter mrmContentRetrievedCounter = Metrics.counter(name(MessagesCache.class, "mrmViewRetrieved"));
+  private final Counter sharedMrmDataKeyRemovedCounter = Metrics.counter(
+      name(MessagesCache.class, "sharedMrmKeyRemoved"));
 
   static final String NEXT_SLOT_TO_PERSIST_KEY = "user_queue_persist_slot";
   private static final byte[] LOCK_VALUE = "1".getBytes(StandardCharsets.UTF_8);
@@ -101,16 +171,49 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
   private static final String QUEUE_KEYSPACE_PREFIX = "__keyspace@0__:user_queue::";
   private static final String PERSISTING_KEYSPACE_PREFIX = "__keyspace@0__:user_queue_persisting::";
 
+  private static final String MRM_VIEWS_EXPERIMENT_NAME = "mrmViews";
+
   @VisibleForTesting
   static final Duration MAX_EPHEMERAL_MESSAGE_DELAY = Duration.ofSeconds(10);
 
   private static final String GET_FLUX_NAME = MetricsUtil.name(MessagesCache.class, "get");
   private static final int PAGE_SIZE = 100;
 
+  private static final int REMOVE_MRM_RECIPIENT_VIEW_CONCURRENCY = 8;
+
   private static final Logger logger = LoggerFactory.getLogger(MessagesCache.class);
 
   public MessagesCache(final FaultTolerantRedisCluster redisCluster, final ExecutorService notificationExecutorService,
-      final Scheduler messageDeliveryScheduler, final ExecutorService messageDeletionExecutorService, final Clock clock)
+      final Scheduler messageDeliveryScheduler, final ExecutorService messageDeletionExecutorService, final Clock clock,
+      final DynamicConfigurationManager<DynamicConfiguration> dynamicConfigurationManager)
+      throws IOException {
+    this(
+        redisCluster,
+        notificationExecutorService,
+        messageDeliveryScheduler,
+        messageDeletionExecutorService,
+        clock,
+        dynamicConfigurationManager,
+        new MessagesCacheInsertScript(redisCluster),
+        new MessagesCacheInsertSharedMultiRecipientPayloadAndViewsScript(redisCluster),
+        new MessagesCacheGetItemsScript(redisCluster),
+        new MessagesCacheRemoveByGuidScript(redisCluster),
+        new MessagesCacheRemoveQueueScript(redisCluster),
+        new MessagesCacheGetQueuesToPersistScript(redisCluster),
+        new MessagesCacheRemoveRecipientViewFromMrmDataScript(redisCluster)
+    );
+  }
+
+  @VisibleForTesting
+  MessagesCache(final FaultTolerantRedisCluster redisCluster, final ExecutorService notificationExecutorService,
+      final Scheduler messageDeliveryScheduler, final ExecutorService messageDeletionExecutorService, final Clock clock,
+      final DynamicConfigurationManager<DynamicConfiguration> dynamicConfigurationManager,
+      final MessagesCacheInsertScript insertScript,
+      final MessagesCacheInsertSharedMultiRecipientPayloadAndViewsScript insertMrmScript,
+      final MessagesCacheGetItemsScript getItemsScript, final MessagesCacheRemoveByGuidScript removeByGuidScript,
+      final MessagesCacheRemoveQueueScript removeQueueScript,
+      final MessagesCacheGetQueuesToPersistScript getQueuesToPersistScript,
+      final MessagesCacheRemoveRecipientViewFromMrmDataScript removeRecipientViewFromMrmDataScript)
       throws IOException {
 
     this.redisCluster = redisCluster;
@@ -122,14 +225,15 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
     this.messageDeletionExecutorService = messageDeletionExecutorService;
     this.messageDeletionScheduler = Schedulers.fromExecutorService(messageDeletionExecutorService, "messageDeletion");
 
-    this.insertScript = ClusterLuaScript.fromResource(redisCluster, "lua/insert_item.lua", ScriptOutputType.INTEGER);
-    this.removeByGuidScript = ClusterLuaScript.fromResource(redisCluster, "lua/remove_item_by_guid.lua",
-        ScriptOutputType.MULTI);
-    this.getItemsScript = ClusterLuaScript.fromResource(redisCluster, "lua/get_items.lua", ScriptOutputType.MULTI);
-    this.removeQueueScript = ClusterLuaScript.fromResource(redisCluster, "lua/remove_queue.lua",
-        ScriptOutputType.STATUS);
-    this.getQueuesToPersistScript = ClusterLuaScript.fromResource(redisCluster, "lua/get_queues_to_persist.lua",
-        ScriptOutputType.MULTI);
+    this.dynamicConfigurationManager = dynamicConfigurationManager;
+
+    this.insertScript = insertScript;
+    this.insertMrmScript = insertMrmScript;
+    this.removeByGuidScript = removeByGuidScript;
+    this.getItemsScript = getItemsScript;
+    this.removeQueueScript = removeQueueScript;
+    this.getQueuesToPersistScript = getQueuesToPersistScript;
+    this.removeRecipientViewFromMrmDataScript = removeRecipientViewFromMrmDataScript;
   }
 
   @Override
@@ -163,48 +267,51 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
   public long insert(final UUID guid, final UUID destinationUuid, final byte destinationDevice,
       final MessageProtos.Envelope message) {
     final MessageProtos.Envelope messageWithGuid = message.toBuilder().setServerGuid(guid.toString()).build();
-    return (long) insertTimer.record(() ->
-        insertScript.executeBinary(List.of(getMessageQueueKey(destinationUuid, destinationDevice),
-                getMessageQueueMetadataKey(destinationUuid, destinationDevice),
-                getQueueIndexKey(destinationUuid, destinationDevice)),
-            List.of(messageWithGuid.toByteArray(),
-                String.valueOf(message.getServerTimestamp()).getBytes(StandardCharsets.UTF_8),
-                guid.toString().getBytes(StandardCharsets.UTF_8))));
+    return insertTimer.record(() -> insertScript.execute(destinationUuid, destinationDevice, messageWithGuid));
   }
 
-  public CompletableFuture<Optional<MessageProtos.Envelope>> remove(final UUID destinationUuid,
+  public byte[] insertSharedMultiRecipientMessagePayload(UUID mrmGuid,
+      SealedSenderMultiRecipientMessage sealedSenderMultiRecipientMessage) {
+    final byte[] sharedMrmKey = getSharedMrmKey(mrmGuid);
+    insertSharedMrmPayloadTimer.record(() -> insertMrmScript.execute(sharedMrmKey, sealedSenderMultiRecipientMessage));
+    return sharedMrmKey;
+  }
+
+  public CompletableFuture<Optional<RemovedMessage>> remove(final UUID destinationUuid,
       final byte destinationDevice,
       final UUID messageGuid) {
 
     return remove(destinationUuid, destinationDevice, List.of(messageGuid))
-        .thenApply(removed -> removed.isEmpty() ? Optional.empty() : Optional.of(removed.get(0)));
+        .thenApply(removed -> removed.isEmpty() ? Optional.empty() : Optional.of(removed.getFirst()));
   }
 
-  @SuppressWarnings("unchecked")
-  public CompletableFuture<List<MessageProtos.Envelope>> remove(final UUID destinationUuid,
-      final byte destinationDevice,
-      final List<UUID> messageGuids) {
+  public CompletableFuture<List<RemovedMessage>> remove(final UUID destinationUuid,
+      final byte destinationDevice, final List<UUID> messageGuids) {
 
-    return removeByGuidScript.executeBinaryAsync(List.of(getMessageQueueKey(destinationUuid, destinationDevice),
-                getMessageQueueMetadataKey(destinationUuid, destinationDevice),
-                getQueueIndexKey(destinationUuid, destinationDevice)),
-            messageGuids.stream().map(guid -> guid.toString().getBytes(StandardCharsets.UTF_8))
-                .collect(Collectors.toList()))
-        .thenApplyAsync(result -> {
-          List<byte[]> serialized = (List<byte[]>) result;
+    final Timer.Sample sample = Timer.start();
 
-          final List<MessageProtos.Envelope> removedMessages = new ArrayList<>(serialized.size());
+    return removeByGuidScript.execute(destinationUuid, destinationDevice, messageGuids)
+        .thenApplyAsync(serialized -> {
+
+          final List<RemovedMessage> removedMessages = new ArrayList<>(serialized.size());
+          final List<byte[]> sharedMrmKeysToUpdate = new ArrayList<>();
 
           for (final byte[] bytes : serialized) {
             try {
-              removedMessages.add(MessageProtos.Envelope.parseFrom(bytes));
+              final MessageProtos.Envelope envelope = MessageProtos.Envelope.parseFrom(bytes);
+              removedMessages.add(RemovedMessage.fromEnvelope(envelope));
+              if (envelope.hasSharedMrmKey()) {
+                sharedMrmKeysToUpdate.add(envelope.getSharedMrmKey().toByteArray());
+              }
             } catch (final InvalidProtocolBufferException e) {
               logger.warn("Failed to parse envelope", e);
             }
           }
 
+          removeRecipientViewFromMrmData(sharedMrmKeysToUpdate, destinationUuid, destinationDevice);
           return removedMessages;
-        }, messageDeletionExecutorService);
+        }, messageDeletionExecutorService).whenComplete((ignored, throwable) -> sample.stop(removeByGuidTimer));
+
   }
 
   public boolean hasMessages(final UUID destinationUuid, final byte destinationDevice) {
@@ -247,7 +354,7 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
 
   private static boolean isStaleEphemeralMessage(final MessageProtos.Envelope message,
       long earliestAllowableTimestamp) {
-    return message.hasEphemeral() && message.getEphemeral() && message.getTimestamp() < earliestAllowableTimestamp;
+    return message.getEphemeral() && message.getClientTimestamp() < earliestAllowableTimestamp;
   }
 
   private void discardStaleEphemeralMessages(final UUID destinationUuid, final byte destinationDevice,
@@ -279,36 +386,120 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
         // we want to ensure we don’t accidentally block the Lettuce/netty i/o executors
         .publishOn(messageDeliveryScheduler)
         .map(Pair::first)
-        .flatMapIterable(queueItems -> {
-          final List<MessageProtos.Envelope> envelopes = new ArrayList<>(queueItems.size() / 2);
+        .concatMap(queueItems -> {
+
+          final List<Mono<MessageProtos.Envelope>> envelopes = new ArrayList<>(queueItems.size() / 2);
 
           for (int i = 0; i < queueItems.size() - 1; i += 2) {
             try {
               final MessageProtos.Envelope message = MessageProtos.Envelope.parseFrom(queueItems.get(i));
 
-              envelopes.add(message);
+              final Mono<MessageProtos.Envelope> messageMono;
+              if (message.hasSharedMrmKey()) {
+                final Mono<?> experimentMono = maybeRunMrmViewExperiment(message, destinationUuid, destinationDevice);
+
+                // mrm views phase 1: messageMono for sharedMrmKey is always Mono.just(), because messages always have content
+                // To avoid races, wait for the experiment to run, but ignore any errors
+                messageMono = experimentMono
+                    .onErrorComplete()
+                    .then(Mono.just(message.toBuilder().clearSharedMrmKey().build()));
+              } else {
+                messageMono = Mono.just(message);
+              }
+
+              envelopes.add(messageMono);
+
             } catch (InvalidProtocolBufferException e) {
               logger.warn("Failed to parse envelope", e);
             }
           }
 
-          return envelopes;
+          return Flux.mergeSequential(envelopes);
         });
   }
 
-  private Flux<Pair<List<byte[]>, Long>> getNextMessagePage(final UUID destinationUuid, final byte destinationDevice,
+  /**
+   * Runs the fetch and compare logic for the MRM view experiment, if it is enabled.
+   *
+   * @see DynamicMessagesConfiguration#mrmViewExperimentEnabled()
+   */
+  private Mono<?> maybeRunMrmViewExperiment(final MessageProtos.Envelope mrmMessage, final UUID destinationUuid,
+      final byte destinationDevice) {
+    if (dynamicConfigurationManager.getConfiguration().getMessagesConfiguration()
+        .mrmViewExperimentEnabled()) {
+
+      final Experiment experiment = new Experiment(MRM_VIEWS_EXPERIMENT_NAME);
+
+      final byte[] key = mrmMessage.getSharedMrmKey().toByteArray();
+      final byte[] sharedMrmViewKey = MessagesCache.getSharedMrmViewKey(new AciServiceIdentifier(destinationUuid),
+          destinationDevice);
+
+      final Mono<MessageProtos.Envelope> mrmMessageMono = Mono.from(redisCluster.withBinaryClusterReactive(
+          conn -> conn.reactive().hmget(key, "data".getBytes(StandardCharsets.UTF_8), sharedMrmViewKey)
+              .collectList()
+              .publishOn(messageDeliveryScheduler)
+              .handle((mrmDataAndView, sink) -> {
+                try {
+                  assert mrmDataAndView.size() == 2;
+
+                  final byte[] content = SealedSenderMultiRecipientMessage.messageForRecipient(
+                      mrmDataAndView.getFirst().getValue(),
+                      mrmDataAndView.getLast().getValue());
+
+                  sink.next(mrmMessage.toBuilder()
+                      .clearSharedMrmKey()
+                      .setContent(ByteString.copyFrom(content))
+                      .build());
+
+                  mrmContentRetrievedCounter.increment();
+                } catch (Exception e) {
+                  sink.error(e);
+                }
+              })));
+
+      experiment.compareFutureResult(mrmMessage.toBuilder().clearSharedMrmKey().build(),
+          mrmMessageMono.toFuture());
+
+      return mrmMessageMono;
+    } else {
+      return Mono.empty();
+    }
+  }
+
+  /**
+   * Makes a best-effort attempt at asynchronously updating (and removing when empty) the MRM data structure
+   */
+  void removeRecipientViewFromMrmData(final List<byte[]> sharedMrmKeys, final UUID accountUuid,
+      final byte deviceId) {
+
+    if (sharedMrmKeys.isEmpty()) {
+      return;
+    }
+
+    final Timer.Sample sample = Timer.start();
+    Flux.fromIterable(sharedMrmKeys)
+        .collectMultimap(SlotHash::getSlot)
+        .flatMapMany(slotsAndKeys -> Flux.fromIterable(slotsAndKeys.values()))
+        .flatMap(
+            keys -> removeRecipientViewFromMrmDataScript.execute(keys, new AciServiceIdentifier(accountUuid), deviceId),
+            REMOVE_MRM_RECIPIENT_VIEW_CONCURRENCY)
+        .doOnNext(sharedMrmDataKeyRemovedCounter::increment)
+        .onErrorResume(e -> {
+          logger.warn("Error removing recipient view", e);
+          return Mono.just(0L);
+        })
+        .then()
+        .doOnTerminate(() -> sample.stop(removeRecipientViewTimer))
+        .subscribe();
+  }
+
+  private Mono<Pair<List<byte[]>, Long>> getNextMessagePage(final UUID destinationUuid,
+      final byte destinationDevice,
       long messageId) {
 
-    return getItemsScript.executeBinaryReactive(
-            List.of(getMessageQueueKey(destinationUuid, destinationDevice),
-                getPersistInProgressKey(destinationUuid, destinationDevice)),
-            List.of(String.valueOf(PAGE_SIZE).getBytes(StandardCharsets.UTF_8),
-                String.valueOf(messageId).getBytes(StandardCharsets.UTF_8)))
-        .map(result -> {
+    return getItemsScript.execute(destinationUuid, destinationDevice, PAGE_SIZE, messageId)
+        .map(queueItems -> {
           logger.trace("Processing page: {}", messageId);
-
-          @SuppressWarnings("unchecked")
-          List<byte[]> queueItems = (List<byte[]>) result;
 
           if (queueItems.isEmpty()) {
             return new Pair<>(Collections.emptyList(), null);
@@ -320,7 +511,7 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
           }
 
           final long lastMessageId = Long.parseLong(
-              new String(queueItems.get(queueItems.size() - 1), StandardCharsets.UTF_8));
+              new String(queueItems.getLast(), StandardCharsets.UTF_8));
 
           return new Pair<>(queueItems, lastMessageId);
         });
@@ -358,10 +549,35 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
   public CompletableFuture<Void> clear(final UUID destinationUuid, final byte deviceId) {
     final Timer.Sample sample = Timer.start();
 
-    return removeQueueScript.executeBinaryAsync(List.of(getMessageQueueKey(destinationUuid, deviceId),
-                getMessageQueueMetadataKey(destinationUuid, deviceId),
-                getQueueIndexKey(destinationUuid, deviceId)),
-            Collections.emptyList())
+    return removeQueueScript.execute(destinationUuid, deviceId, Collections.emptyList())
+        .publishOn(messageDeletionScheduler)
+        .expand(messagesToProcess -> {
+          if (messagesToProcess.isEmpty()) {
+            return Mono.empty();
+          }
+
+          final List<byte[]> mrmKeys = new ArrayList<>(messagesToProcess.size());
+          final List<String> processedMessages = new ArrayList<>(messagesToProcess.size());
+          for (byte[] serialized : messagesToProcess) {
+            try {
+              final MessageProtos.Envelope message = MessageProtos.Envelope.parseFrom(serialized);
+
+              processedMessages.add(message.getServerGuid());
+
+              if (message.hasSharedMrmKey()) {
+                mrmKeys.add(message.getSharedMrmKey().toByteArray());
+              }
+            } catch (final InvalidProtocolBufferException e) {
+              logger.warn("Failed to parse envelope", e);
+            }
+          }
+
+          removeRecipientViewFromMrmData(mrmKeys, destinationUuid, deviceId);
+
+          return removeQueueScript.execute(destinationUuid, deviceId, processedMessages);
+        })
+        .then()
+        .toFuture()
         .thenRun(() -> sample.stop(clearQueueTimer));
   }
 
@@ -371,11 +587,7 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
   }
 
   List<String> getQueuesToPersist(final int slot, final Instant maxTime, final int limit) {
-    //noinspection unchecked
-    return getQueuesToPersistTimer.record(() -> (List<String>) getQueuesToPersistScript.execute(
-        List.of(new String(getQueueIndexKey(slot), StandardCharsets.UTF_8)),
-        List.of(String.valueOf(maxTime.toEpochMilli()),
-            String.valueOf(limit))));
+    return getQueuesToPersistTimer.record(() -> getQueuesToPersistScript.execute(slot, maxTime, limit));
   }
 
   void addQueueToPersist(final UUID accountUuid, final byte deviceId) {
@@ -534,29 +746,36 @@ public class MessagesCache extends RedisClusterPubSubAdapter<String, String> imp
     return channel.substring(startOfHashTag + 1, endOfHashTag);
   }
 
-  @VisibleForTesting
   static byte[] getMessageQueueKey(final UUID accountUuid, final byte deviceId) {
     return ("user_queue::{" + accountUuid.toString() + "::" + deviceId + "}").getBytes(StandardCharsets.UTF_8);
   }
 
-  private static byte[] getMessageQueueMetadataKey(final UUID accountUuid, final byte deviceId) {
+  static byte[] getMessageQueueMetadataKey(final UUID accountUuid, final byte deviceId) {
     return ("user_queue_metadata::{" + accountUuid.toString() + "::" + deviceId + "}").getBytes(StandardCharsets.UTF_8);
   }
 
-  private static byte[] getQueueIndexKey(final UUID accountUuid, final byte deviceId) {
+  static byte[] getQueueIndexKey(final UUID accountUuid, final byte deviceId) {
     return getQueueIndexKey(SlotHash.getSlot(accountUuid.toString() + "::" + deviceId));
   }
 
-  private static byte[] getQueueIndexKey(final int slot) {
+  static byte[] getQueueIndexKey(final int slot) {
     return ("user_queue_index::{" + RedisClusterUtil.getMinimalHashTag(slot) + "}").getBytes(StandardCharsets.UTF_8);
   }
 
-  private static byte[] getPersistInProgressKey(final UUID accountUuid, final byte deviceId) {
+  static byte[] getSharedMrmKey(final UUID mrmGuid) {
+    return ("mrm::{" + mrmGuid.toString() + "}").getBytes(StandardCharsets.UTF_8);
+  }
+
+  static byte[] getPersistInProgressKey(final UUID accountUuid, final byte deviceId) {
     return ("user_queue_persisting::{" + accountUuid + "::" + deviceId + "}").getBytes(StandardCharsets.UTF_8);
   }
 
-  private static byte[] getUnlinkInProgressKey(final UUID accountUuid) {
-    return ("user_account_unlinking::{" + accountUuid + "}").getBytes(StandardCharsets.UTF_8);
+  static byte[] getSharedMrmViewKey(final AciServiceIdentifier serviceIdentifier, final byte deviceId) {
+    final ByteBuffer keyBb = ByteBuffer.allocate(18);
+    keyBb.put(serviceIdentifier.toFixedWidthByteArray());
+    keyBb.put(deviceId);
+    assert !keyBb.hasRemaining();
+    return keyBb.array();
   }
 
   static UUID getAccountUuidFromQueueName(final String queueName) {
